# Build-And-Invest

./: CMakeLists.txt  CMakeUserPresets.json  README.md
Pocket-Economic/: CMakeLists.txt  Pocket-Economic.rc  main.cpp  main_window.cpp  main_window.h  pocket_economic.ui
Pocket-Economic/app/: main.cpp
Pocket-Economic/backend/bots/includes/: bot.h  fifth_bot.h  first_bot.h  fourth_bot.h  second_bot.h  third_bot.h
Pocket-Economic/backend/bots/source/: bot.cpp  fifth_bot.cpp  first_bot.cpp  fourth_bot.cpp  second_bot.cpp  third_bot.cpp
Pocket-Economic/backend/includes/: game.h  player.h  standard_classes.h
Pocket-Economic/backend/includes/agencies/: advert_agency.h  building_agency.h  grocery_agency.h  land_agency.h  real_estate_agency.h
Pocket-Economic/backend/includes/agencies/real_estate_agency/: global_real_estate_agency.h  land_sales_agency.h  player_sales_agency.h  real_estate_agency.h
Pocket-Economic/backend/includes/game/: calamity.h  game.h  main_game_window.h  news_window.h
Pocket-Economic/backend/includes/land_plot/: building_land.h  land_agency.h  land_plot.h  resort.h
Pocket-Economic/backend/includes/realty/: building_agency.h  house.h  land_plot.h  non_build_realty.h  real_estate_agency.h  realty.h  supermarket.h
Pocket-Economic/backend/source/: calamity.cpp  game.cpp  player.cpp
Pocket-Economic/backend/source/agencies/: advert_agency.cpp  building_agency.cpp  grocery_agency.cpp  land_agency.cpp  real_estate_agency.cpp
Pocket-Economic/backend/source/agencies/real_estate_agency/: global_real_estate_agency.cpp  land_sales_agency.cpp  player_sales_agency.cpp  real_estate_agency.cpp
Pocket-Economic/backend/source/game/: calamity.cpp  game.cpp  main_game_window.cpp  news_window.cpp  starting_window.cpp
Pocket-Economic/backend/source/land_plot/: building_land.cpp  land_agency.cpp  land_plot.cpp  resort.cpp
Pocket-Economic/backend/source/realty/: building_agency.cpp  house.cpp  land_plot.cpp  non_build_realty.cpp  real_estate_agency.cpp  realty.cpp  supermarket.cpp
Pocket-Economic/frontend/: main_window.cpp  qt_headers.h
Pocket-Economic/frontend/includes/: grid.h  main_window.h  my_label.h  player_owner.h  qt_headers.h  roof_label.h
Pocket-Economic/frontend/includes/input_windows/: input_costs_window.h  input_demand_window.h  input_player_window.h
Pocket-Economic/frontend/source/: grid.cpp  main_window.cpp  my_label.cpp  player_owner.cpp  roof_label.cpp
Pocket-Economic/frontend/source/input_windows/: input_costs_window.cpp  input_demand_window.cpp  input_player_window.cpp
